<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
>
    <data>
        <import type="mx.fidisohl.tweetmood.models.ENetworkStatus"/>
        <import type="mx.fidisohl.tweetmood.utils.StringUtils"/>
        <import type="mx.fidisohl.tweetmood.utils.ViewUtils"/>
        <import type="android.view.View"/>
        <variable name="vm" type="mx.fidisohl.tweetmood.ui.main.MainViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:visibility="@{ViewUtils.networkCallProcessing(vm.networkCalls.eRequestStatus) ? View.GONE : View.VISIBLE }"
        >
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutTop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:paddingBottom="40dp"
                    app:layout_constraintTop_toTopOf="parent"
            >
                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        app:layout_constraintTop_toTopOf="parent"
                >
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/mainEditTextStyle"
                            android:hint="@string/twitter_username"
                            android:maxLength="15"
                            android:inputType="textNoSuggestions"
                            android:text="@={vm.username}"
                            android:digits="@string/allowed_characters"
                            android:textAllCaps="false"
                    />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                        android:id="@+id/searchButton"
                        android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/search_tweets"
                        android:enabled="@{StringUtils.isNotNullOrEmpty(vm.username)}"
                        android:onClick="@{vm::btnMainClick}"
                        app:layout_constraintTop_toBottomOf="@+id/layoutUsername"
                />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/layoutTop"
                    app:layout_constraintBottom_toBottomOf="parent"
            >
                <TextView
                        android:id="@+id/tvUserNameTweets"
                        android:layout_width="match_parent" android:layout_height="wrap_content"
                        tools:text="@string/username_tweets_placeholder"
                        android:layout_marginStart="26dp"
                        android:layout_marginEnd="26dp"
                        android:visibility="@{vm.tweetsListEmpty() ? View.GONE : View.VISIBLE}"
                        android:textColor="@color/colorDarkGray"
                        app:layout_constraintTop_toTopOf="parent"
                />

                <ImageView
                        android:id="@+id/layoutSeparator"
                        android:layout_width="match_parent" android:layout_height="1dp"
                        android:src="@drawable/separator"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/tvUserNameTweets"/>

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvUserTweets"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="20dp"
                        tools:listitem="@layout/item_tweet"
                        android:visibility="@{vm.tweetsListEmpty() ? View.GONE : View.VISIBLE}"
                        app:layout_constraintTop_toBottomOf="@+id/layoutSeparator"
                        app:layout_constraintBottom_toBottomOf="parent"
                />

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layoutMessages"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="80dp"
                        app:layout_constraintTop_toBottomOf="@+id/layoutSeparator"
                        android:padding="8dp"
                        android:visibility="@{vm.tweetsListEmpty() ? View.VISIBLE : View.GONE}"
                        tools:visibility="visible">

                    <ImageView
                            android:id="@+id/imgInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@android:drawable/ic_dialog_info"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:tint="@color/colorDarkGray"/>
                    <TextView
                            android:id="@+id/tvNotData"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="30dp"
                            android:layout_marginEnd="30dp"
                            android:text="@string/msg_introduce_username"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            app:layout_constraintTop_toBottomOf="@+id/imgInfo"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
                android:id="@+id/layoutLoader"
                layout="@layout/layout_loader"
                android:visibility="@{ViewUtils.networkCallProcessing(vm.networkCalls.eRequestStatus) ? View.VISIBLE : View.GONE}"
                tools:visibility="gone"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>