<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
>
    <data>
        <import type="mx.fidisohl.tweetmood.models.ENetworkStatus"/>
        <import type="mx.fidisohl.tweetmood.utils.StringUtils"/>
        <import type="mx.fidisohl.tweetmood.utils.ViewUtils"/>
        <import type="android.view.View"/>
        <variable name="vm" type="mx.fidisohl.tweetmood.ui.analysis.TweetAnalysisViewModel"/>
        <variable name="result" type="mx.fidisohl.tweetmood.models.google.AnalysisResponse"/>
        <variable name="tweet" type="mx.fidisohl.tweetmood.models.TweetModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.analysis.AnalysisActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="MissingConstraints"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/colorPrimary10"
        >
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layoutTweet"
                    android:background="@android:color/white"
                    android:elevation="5dp"
                    android:paddingBottom="@dimen/ars_default_margin"
                    app:layout_constraintTop_toTopOf="parent"
            >

                <ImageView
                        android:id="@+id/imgProfile"
                        android:layout_width="@dimen/ars_profile_width"
                        android:layout_height="@dimen/ars_profile_width"
                        android:layout_marginTop="@dimen/ars_profile_image_margin_top"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:src="@drawable/ic_person"
                        android:background="@drawable/rounded_background"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/username_photo_profile"/>

                <TextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        tools:text="Gerardo Epitacio"
                        android:text="@{tweet.user.name}"
                        android:textSize="@dimen/ars_username_text_size"
                        android:fontFamily="@font/roboto"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@+id/imgProfile"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"

                />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:id="@+id/screenUsername"
                          tools:text="\@gerardoepitacio"
                          android:fontFamily="@font/roboto"
                          android:textSize="@dimen/ars_screen_username_text_size"
                          android:text="@{`@`+tweet.user.screen_name}"
                          app:layout_constraintEnd_toEndOf="parent"
                          app:layout_constraintStart_toStartOf="parent"
                          app:layout_constraintTop_toBottomOf="@+id/username"
                />

                <ImageView
                        android:id="@+id/layoutSeparator1"
                        android:layout_width="match_parent" android:layout_height="1dp"
                        android:src="@drawable/separator"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40dp"
                        android:layout_marginTop="@dimen/ars_default_margin"
                        app:layout_constraintTop_toBottomOf="@+id/screenUsername"
                />

                <TextView
                        android:id="@+id/tvTweetContent"
                        android:layout_width="match_parent" android:layout_height="wrap_content"
                        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consectetur diam metus, at aliquam velit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consectetur diam metus, at aliquam velit."
                        android:text="@{tweet.text}"
                        android:transitionName="tweetContent"
                        android:fontFamily="@font/roboto"
                        android:textStyle="italic"
                        android:textSize="@dimen/ars_tweet_content_text_size"
                        android:layout_marginStart="@dimen/ars_default_margin"
                        android:layout_marginEnd="@dimen/ars_default_margin"
                        android:padding="@dimen/ars_default_margin"
                        app:layout_constraintTop_toBottomOf="@+id/layoutSeparator1"
                        app:layout_constraintStart_toEndOf="@+id/imgProfile"
                        app:layout_constraintEnd_toEndOf="parent"
                />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ars_default_margin"
                    app:layout_constraintTop_toBottomOf="@+id/layoutTweet"
                    android:padding="@dimen/ars_analysis_result_padding"
                    android:background="@{ViewUtils.getColorFromResult(result)}"
            >

                <androidx.emoji.widget.EmojiAppCompatTextView
                        android:id="@+id/tvEmoji"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/ars_emoji_size"
                        android:text="@{ViewUtils.getEmojiFromResult(result)}"
                        android:textColor="#fff"
                        android:textAlignment="center"
                        android:layout_marginTop="@dimen/ars_default_margin"
                        app:layout_constraintTop_toTopOf="parent"
                />

                <TextView
                        android:id="@+id/tvResult"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/tvEmoji"
                        android:textAlignment="center"
                        android:layout_marginTop="@dimen/ars_default_margin"
                        android:fontFamily="@font/roboto"
                        android:textStyle="bold"
                        android:textSize="@dimen/ars_analysis_result_text_size"
                        android:text="@{ViewUtils.getTextFromResult(result)}"
                        tools:text="HAPPY"
                />

                <ProgressBar
                        android:id="@+id/layoutProgressBar"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:indeterminate="true"
                        android:theme="@style/AppTheme.LinearProgress"
                        android:maxWidth="50dp"
                        android:layout_marginTop="@dimen/ars_loader_margin_top"
                        app:layout_constraintTop_toTopOf="parent"
                        android:visibility="@{ViewUtils.networkCallProcessing(vm.networkCalls.eRequestStatus) ? View.VISIBLE : View.GONE}"
                />

                <TextView
                        android:id="@+id/loaderText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:textSize="15sp"
                        android:textColor="@color/colorDarkGray"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:textAlignment="center"
                        android:text="@string/analysing_tweet_mood"
                        app:layout_constraintTop_toBottomOf="@+id/layoutProgressBar"
                        android:visibility="@{ViewUtils.networkCallProcessing(vm.networkCalls.eRequestStatus) ? View.VISIBLE : View.GONE}"
                />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                    android:id="@+id/btnAccept"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:padding="12dp"
                    android:textStyle="bold"
                    android:layout_margin="@dimen/ars_button_main"
                    android:textAllCaps="true"
                    android:text="@string/accept"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>